--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
       <!--Section 1-->
       <section class="hero">
-        <div class="container">
+        <div class="container-section-01">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="buy-now-btn" type="button">Order Service</button>
         </div>
@@ -74,8 +74,8 @@
 
       <!--Section 2-->
       <section class="advantages">
-        <div class="container">
-          <h2>Advantages</h2>
+        <div class="container-section-02">
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <h3 class="advantages-list-title">Strategy</h3>
@@ -111,7 +111,7 @@
 
       <!--Section 3-->
       <section class="team">
-        <div class="container">
+        <div class="container-section-03">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-list-item">
@@ -121,8 +121,10 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="team-list-title">Mark Guerrero</h3>
-              <p class="team-list-text">Product Designer</p>
+              <div class="box-team">
+                <h3 class="team-list-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -131,8 +133,10 @@
                 alt="Tom Ford"
                 width="264"
               />
-              <h3 class="team-list-title">Tom Ford</h3>
-              <p class="team-list-text">Frontend Developer</p>
+              <div class="box-team">
+                <h3 class="team-list-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -141,8 +145,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="team-list-title">Camila Garcia</h3>
-              <p class="team-list-text">Marketing</p>
+              <div class="box-team">
+                <h3 class="team-list-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -151,8 +157,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="team-list-title">Daniel Wilson</h3>
-              <p class="team-list-text">UI Designer</p>
+              <div class="box-team">
+                <h3 class="team-list-title">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -160,7 +168,7 @@
 
       <!--Section 4-->
       <section class="portfolio">
-        <div class="container">
+        <div class="container-section-04">
           <h2 class="portfolio-section">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -170,8 +178,10 @@
                 alt="Banking App"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="box-portfolio">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -180,8 +190,10 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="box-portfolio">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -190,8 +202,10 @@
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="box-portfolio">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -200,8 +214,10 @@
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="box-portfolio">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -210,8 +226,10 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
+              <div class="box-portfolio">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -220,8 +238,10 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="box-portfolio">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
