--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <!--Header-->
     <header class="page-header">
-      <div class="container-header">
+      <div class="container">
         <nav class="page-nav">
           <a class="page-logo" href="./index.html"
             >Web<span class="logo-color">Studio</span></a
@@ -66,7 +66,7 @@
     <main>
       <!--Section 1-->
       <section class="hero">
-        <div class="container-section-01">
+        <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="buy-now-btn" type="button">Order Service</button>
         </div>
@@ -74,7 +74,7 @@
 
       <!--Section 2-->
       <section class="advantages">
-        <div class="container-section-02">
+        <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
@@ -111,7 +111,7 @@
 
       <!--Section 3-->
       <section class="team">
-        <div class="container-section-03">
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-list-item">
@@ -168,7 +168,7 @@
 
       <!--Section 4-->
       <section class="portfolio">
-        <div class="container-section-04">
+        <div class="container">
           <h2 class="portfolio-section">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
