--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <!--Footer-->
     <footer class="page-footer">
       <div class="container">
-        <a class="page-logo-footer"
+        <a href="./index.html" class="page-logo-footer"
           >Web<span class="logo-color-studio">Studio</span></a
         >
         <p class="footer-text">
