--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <!--Header-->
     <header class="page-header">
-      <div class="container">
+      <div class="container" class="header-container">
         <nav class="page-nav">
           <a class="page-logo" href="./index.html"
             >Web<span class="logo-color">Studio</span></a
