--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <!--Header-->
     <header class="page-header">
-      <div class="container" class="header-container">
+      <div class="container header-container">
         <nav class="page-nav">
           <a class="page-logo" href="./index.html"
             >Web<span class="logo-color">Studio</span></a
@@ -117,7 +117,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
-                src="./images/web-study-photo-1/photo1.jpg"
+                src="./images/web-study-photo-1/img.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
@@ -129,7 +129,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
-                src="./images/web-study-photo-1/photo2.jpg"
+                src="./images/web-study-photo-1/img-1.jpg"
                 alt="Tom Ford"
                 width="264"
               />
@@ -141,7 +141,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
-                src="./images/web-study-photo-1/photo3.jpg"
+                src="./images/web-study-photo-1/img-2.jpg"
                 alt="Camila Garcia"
                 width="264"
               />
@@ -153,7 +153,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
-                src="./images/web-study-photo-1/photo4.jpg"
+                src="./images/web-study-photo-1/img-3.jpg"
                 alt="Daniel Wilson"
                 width="264"
               />
